--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,3 +2,22 @@
 	font-size: 30px;
 	margin-left: 30%;
 }
+
+.usuario{
+	font-size: 40px;
+	margin-left: 40%;
+}
+
+
+.platillo{
+	width: 90%;
+}
+
+ul li{
+	margin: 1%;
+}
+
+.textarea{
+	border-radius: 35px;
+	resize: none;
+}
