--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,9 @@
+body{
+	background-image: url(../img/fondo.jpg);
+	background-repeat: no-repeat;
+	background-size: 
+}
+
 .lupa{
 	font-size: 30px;
 	margin-left: 30%;
@@ -21,3 +27,8 @@ ul li{
 	border-radius: 35px;
 	resize: none;
 }
+
+.barra-superior, .body-container{
+	background-color: #fecfde;
+}
+
